[package]
name = "flt"
version = "0.0.2"
edition = "2021"
description = "a 'lite' functional language"
license = "MIT"

[dependencies]
bigdecimal = "0.4"
env_logger = "0.11.6"
log = "0.4.22"
nom = "8.0.0"
regex = "1.11.1"
thiserror = "2.0.9"
clap = { version = "4.5.23", features = ["cargo", "derive"] }
rustyline = "17.0"
eyre = "0.6.12"

[dev-dependencies]
bigdecimal = "0.4"
ctor = "0.6.3"
cucumber = "0.22.1"
tokio = { version = "1.42.0", features = ["full"] }
futures = "0.3.31"

[[test]]
name = "features"
harness = false

[workspace.lints.clippy]
unwrap_used = "deny"
