[package]
name = "flt-cli"
version = "0.0.2"
edition = "2021"
description = "the flt CLI"
license = "MIT"

[lints]
workspace = true

[dependencies]
bigdecimal = "0.4"
clap = { version = "4.5.23", features = ["cargo", "derive"] }
flt = { version = "0.0.2", path = "../flt" }
rustyline = "17.0"
env_logger = "0.11.6"
eyre = "0.6.12"
log = "0.4.22"

[dev-dependencies]
cucumber = "0.22.1"
futures = "0.3.31"
tokio = { version = "1.42.0", features = ["full"] }

[[test]]
name = "cli"
harness = false

[[test]]
name = "repl"
harness = false
